# Clocks

./: .gitignore  README.md  Readme.md
clock_project_refactored/src/: AnimationController.cpp  AnimationController.hpp  Clock.cpp  Clock.hpp  ClockApplication.cpp  ClockApplication.hpp  DigitClock.cpp  DigitClock.hpp  TimeDisplay.cpp  TimeDisplay.hpp  clock_app  main.cpp  makefile
debug/: debugprobe_on_pico2.uf2
debug/picosI2C/i2c_slave/: CMakeLists.txt
debug/squarewave1moteur/: CMakeLists.txt  squarewave.c  squarewave.pio
debug/squarewave4moteurs_doneInterrupt/: squarewave.c  squarewave.pio
elec/: pico_pwm.c
elec/master/i2c_master/: picoMaster.c
elec/picosI2C/: communication.h
elec/picosI2C/i2c_master/: CMakeLists.txt  picoMaster.c
elec/picosI2C/i2c_slave/: CMakeLists.txt  picoSlave.c
elec/slave/: CMakeLists.txt  main.c
elec/slave/i2c_slave/: CMakeLists.txt  i2c_slave.c  slave_i2c_handler.c  slave_i2c_handler.h
elec/slave/squarewavePIO/: CMakeLists.txt  squarewave.c  squarewave.h  squarewave.pio
elec/squarewavePIO/: CMakeLists.txt  squarewave.c  squarewave.pio
our_code/class/: clock_display  main.cpp  makefile
our_code/class/features/: Clock.cpp  Clock.h  Digit.cpp  Digit.h  Hand.cpp  WholeSystem.cpp  main_features.cpp  makefile
our_code/class/transitions/: DigitConfiguration.cpp  DigitConfiguration.h  Transition.cpp  Transition.h
our_code/class/type_transitions/: type_transitions.cpp  type_transitions.h
our_code/simulation copy/: clock_display  main.cpp
our_code/simulation copy/type_transitions/: type_transitions.cpp  type_transitions.h
our_code/simulation/features/: Hand.h  WholeSystem.cpp
our_code/simulation/transitions/: Transition.cpp
our_code/simulation_real/: clock_display  main.cpp  makefile
our_code/simulation_real/communication/: communication.cpp  communication.h
our_code/simulation_real/features/: Clock.cpp  Clock.h  Digit.cpp  Hand.cpp  Hand.h  WholeSystem.h
our_code/simulation_real/transitions/: DigitConfiguration.cpp  Transition.cpp
our_code/simulation_real/type_transitions/: type_transitions.cpp  type_transitions.h
our_code/supervisor/: ClockMotion.h  main.cpp  makefile  supervisor_app
our_code/supervisor/features/: Clock.cpp  Digit.h  Hand.cpp
our_code/supervisor/transitions/: Transition.h
our_code/supervisor/type_transitions/: type_transitions.cpp
simulation/: makefile  simu  test_simu  test_simu.cpp
simulation/receptor/: main.cpp  makefile  receptor
simulation/simulator/: clock_display  main.cpp  makefile
simulation/simulator/communication/: ClockMotion.h  communication.cpp  communication.h
simulation/simulator/features/: Clock.cpp  Clock.h  Hand.cpp  Hand.h
simulation/simulator/transitions/: DigitConfiguration.cpp  DigitConfiguration.h  Transition.h
simulation/simulator/type_transitions/: type_transitions.cpp  type_transitions.h
simulation/supervisor/: main.cpp  makefile  supervisor
simulation/supervisor_with_window/: clock_display  main.cpp
simulation/supervisor_with_window/features/: Clock.cpp  Clock.h
simulation/supervisor_with_window/transitions/: DigitConfiguration.h
simulation/supervisor_with_window/type_transitions/: type_transitions.cpp  type_transitions.h
simulation/to_erase/: clock_display
supervisor/: clock_display  main.cpp  makefile
supervisor/features/: Clock.cpp  Clock.h  Hand.cpp  Hand.h
supervisor/type_transitions/: type_transitions.cpp  type_transitions.h
